Code base enhancements