@@ -1,17 +1,17 @@
 plugins {
     id 'java'
     id 'org.springframework.boot'
-    id 'io.spring.dependency-management'
 }
 
-springBoot {
-    mainClass = 'reveila.spring.Application'
-}
+dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation project(':reveila')
 
-jar {
-    // The Spring Boot plugin disables the plain jar task by default.
-    // We enable it here to distinguish it from the executable bootJar.
-    enabled = true
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    // Apache HttpClient 5 for PATCH support
+    testImplementation 'org.apache.httpcomponents.client5:httpclient5'
+    testImplementation("org.junit.jupiter:junit-jupiter:5.9.2")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
 bootJar {
@@ -19,17 +19,11 @@ bootJar {
     archiveClassifier = 'boot'
 }
 
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation project(':reveila')
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
-
-tasks.withType(Test) {
-    jvmArgs '-XX:+EnableDynamicAgentLoading'
+tasks.named('test') {
+    useJUnitPlatform()
 }
 
 bootRun {
-    // Example JVM arguments for development
+    // JVM arguments for development
     jvmArgs = ['-Xmx2048m', '-Dspring.profiles.active=dev']
 }
